Fixed collapse button icon and navigation close after click

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -97,7 +97,7 @@ p {
 			height: 36px;
 			width: 	46px;
 			float: right;
-
+      padding: 0 5px;
 			border-radius: 5px;
 			background-color: rgba(255,255,255,0);
 			border: 1px solid #c8c8c8;
